add rfd crate. add file open action and dialog to select a folder.

--- a/gtk4/oxide/Cargo.toml
+++ b/gtk4/oxide/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2024"
 log="*"
 env_logger="*"
 
-gtk = { version="*", package="gtk4" }
+gtk = { version="*", package="gtk4", features=["v4_14"] }
+rfd = "*"
 
 
 [build-dependencies]
