add columnview, going to try and implement tree view later on

--- a/gtk4/oxide/Cargo.toml
+++ b/gtk4/oxide/Cargo.toml
@@ -9,8 +9,10 @@ log="*"
 env_logger="*"
 
 gtk = { version="*", package="gtk4", features=["v4_14"] }
+glib-macros = "*"
 rfd = "*"
 
+once_cell = "*"
 
 [build-dependencies]
 glib-build-tools = "*"
